# Polygraph

./: .gitignore  .gitmodules  README.dependencies
dependencies/: config.sub  libglib1.2-dev_1.2.10-19build1_amd64.deb  libglib1.2ldbl_1.2.10-19build1_amd64.deb  libgtk1.2-dev_1.2.10-18.1build2_amd64.deb
dependencies/libstree-0.4.0/: COPYING  ChangeLog  Makefile  Makefile.in  README  autogen.sh  config.h  config.status  configure  configure.in  libtool
dependencies/libstree-0.4.0/docs/: Makefile  Makefile.am  Makefile.in
dependencies/libstree-0.4.0/docs/html/: a1501.html  a1502.html  a1503.html  a1543.html  about.html  api.html  b1513.html  b1514.html  b1515.html  b1555.html  c14.html  c15.html  c16.html  c39.html  c40.html  c41.html  index.html  index.sgml  libstree-lst-algorithms.html  libstree-lst-debug.html  libstree-lst-stree.html  libstree-lst-string.html  libstree-lst-structs.html  x22.html  x23.html  x24.html  x36.html  x37.html  x38.html
dependencies/libstree-0.4.0/docs/sgml/: lst_algorithms.sgml  lst_debug.sgml  lst_stree.sgml  lst_string.sgml  lst_structs.sgml
dependencies/libstree-0.4.0/docs/tmpl/: lst_string.sgml
dependencies/libstree-0.4.0/src/: Makefile  Makefile.in  libstree.h  lst_algorithms.c  lst_algorithms.h  lst_debug.c  lst_debug.h  lst_macros.h  lst_stree.c  lst_stree.h  lst_string.c  lst_string.h  lst_structs.h  lst_timestamp.h
dependencies/libstree-0.4.0/src/.deps/: lst_algorithms.Plo  lst_debug.Plo  lst_stree.Plo  lst_string.Plo
dependencies/libstree-0.4.0/test/: Makefile  Makefile.in  addremovetest  addremovetest.c  addtest  addtest.c  buildtest  buildtest.c  deltest  deltest.c  lcshex  lcshex.c  lcstext  lcstext.c  lrstext  lrstext.c
dependencies/libstree-0.4.0/test/.deps/: addremovetest.Po  addtest.Po  buildtest.Po  deltest.Po  lcshex.Po  lcstext.Po  lrstext.Po
dependencies/sary-1.0.4/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  config.h  config.status  configure  configure.in  libtool  sary-config  sary-config.in  sary.h  sary.m4  sary.pc
dependencies/sary-1.0.4/debian/: Makefile  Makefile.in  changelog  libsary5.files
dependencies/sary-1.0.4/docs/: Makefile  Makefile.in
dependencies/sary-1.0.4/docs/en/: Makefile  Makefile.in  libsary.html  suffix-array.html
dependencies/sary-1.0.4/docs/images/: Makefile  Makefile.in
dependencies/sary-1.0.4/docs/ja/: Makefile  Makefile.in  libsary.html  suffix-array.html
dependencies/sary-1.0.4/man/: Makefile  Makefile.in
dependencies/sary-1.0.4/sary/: Makefile  Makefile.am  Makefile.in  array.c  bsearch.c  builder.c  cache.c  cache.h  ipoint.c  merger.c  mkqsort.c  mmap.c  progress.c  saryconfig.h  saryer.c  saryer.h  sorter.c  str.c  text.c  version.c  writer.c
dependencies/sary-1.0.4/src/: Makefile  Makefile.am  Makefile.in  cache-test  cache-test.c  cat-test  cat-test.c  isearch-test  isearch-test.c  mksary  mksary.c  repeated-test  repeated-test.c  sary  sary.c  search-benchmark  search-benchmark.c
dependencies/sary-1.0.4/src/.libs/: cache-test  cat-test  isearch-test  mksary  repeated-test  sary  search-benchmark
dependencies/sary-1.0.4/tests/: Makefile  Makefile.am  Makefile.in  cat-1  null-1  sary-3
